--- a/myrep/.tko/repository.yaml
+++ b/myrep/.tko/repository.yaml
@@ -12,7 +12,7 @@ sources:
   type: clone
   branch: master
   cache_path: C:\Users\Kakau\Documents\VS Code\Introdução a Programação para Design\POO_Aulas\poo-dd-cd-bloco-c-Kauto22\myrep\.tko\cache\poo\Readme.md
-  cache_timestamp: '2025-11-16 15:07:31'
+  cache_timestamp: '2025-11-18 15:47:34'
   filters:
   - listas
 expanded:
@@ -20,8 +20,11 @@ expanded:
 - poo@campanha-principal
 - poo@bloco_c-listas
 tasks:
+  poo@array: '{rate:100, alone:10}'
   poo@budega: '{rate:100, human:s, iagen:s, guide:s, alone:9, study:240}'
+  poo@lapiseira: '{rate:100, iagen:s, alone:8, study:170}'
   poo@pula-pula: '{rate:100, iagen:s, guide:s, alone:8, study:150}'
+  poo@cinema: '{rate:100, iagen:s, guide:s, alone:8, study:270}'
 flags:
   quests: 1
   tracks: 0
